--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,25 @@ body{
     margin: 0 auto;
     padding: 0 15px;
 }
+.container-fluid{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+@media (max-width: 720px){
+    .container-fluid{
+        padding: 0 15px;
+    }
+}
+.title{
+    text-align: center;
+    color: $bg;
+    font-size: 36px;
+    line-height: 60px;
+    @include f700;
+    margin-bottom: 35px;
+}
+.rate-star{
+    display: inline-block;
+    margin-right: 13px;
+}
