--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,4 +1,14 @@
 $text: #546e7a;
 $red: #e74c3c;
 $green: #8bc34a;
-$bg: #263238;
+$bg: #04151d;
+$gray: #f4f6f5;
+
+@mixin f500 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+@mixin f700 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
