--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,6 +61,15 @@
     background-size: cover;
     background-position: center;
     min-height: 533px;
+    &.page-search {
+        min-height: 230px;
+        .search__inner {
+            padding: 55px 0 70px;
+            &-text {
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
 .search__inner{
     padding: 150px 0 100px;
@@ -185,7 +194,7 @@
         align-items: center;
         max-width: 245px;
         .avatar{
-            width: 30px;
+            min-width: 30px;
             height: 30px;
             border-radius: 50%;
             display: inline-block;
@@ -324,3 +333,568 @@
 }
 
 // end advantages
+// start author
+
+.author {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__box {
+        max-width: 650px;
+        min-height: 215px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $green;
+    }
+    &__title {
+        font-size: 30px;
+        line-height: 30px;
+        color: #fff;
+        margin-right: 45px;
+        max-width: 260px;
+        span {
+            @include f700;
+        }
+    }
+    &__link {
+        font-size: 18px;
+        line-height: 36px;
+        padding: 14px 40px;
+        background-color: #fff;
+    }
+}
+
+//end author
+//start tutorial
+
+.tutorial {
+    padding: 70px 0 120px;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__item {
+        max-width: 370px;
+        width: 100%;
+    }
+}
+.tutorial__item {
+    &-img {
+        min-height: 270px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    &-title {
+        background-color: #f8f8f8;
+        font-size: 24px;
+        text-align: center;
+        @include f700;
+        padding: 30px 10px;
+        color: $bg;
+    }
+}
+
+//end tutorial
+//start footer
+.footer {
+    background-color: $bg;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding: 100px 0 80px;
+    }
+}
+.footer__copy {
+    border-top: 1px solid #424d53;
+}
+.footer__copy-text {
+    text-align: center;
+    font-size: 15px;
+    color: #919699;
+    padding: 25px 0;
+}
+.footer__col {
+    max-width: 270px;
+    width: 100%;
+    &-menu {
+        max-width: 220px;
+    }
+    &-title {
+        font-size: 22px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        color: #fff;
+        padding-bottom: 22px;
+        margin-bottom: 30px;
+        position: relative;
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 2px;
+            width: 51px;
+            height: 3px;
+            background-color: $green;
+        }
+    }
+    &-text {
+        color: #b7c3c8;
+        margin-bottom: 30px;
+    }
+}
+.footer__info {
+    margin-top: 18px;
+    @include f500;
+    color: #fff;
+    padding-left: 30px;
+    position: relative;
+    &::before {
+        content: '\f041';
+        font-family: 'icomoon';
+        color: $green;
+        font-size: 18px;
+        position: absolute;
+        left: 0;
+    }
+}
+.footer__info-phone {
+    &::before {
+        content: '\f095';
+    }
+}
+.footer__col-list {
+    a {
+        margin-bottom: 12px;
+        color: #b7c3c8;
+        padding-left: 22px;
+        position: relative;
+        &::before {
+            content: '\f105';
+            font-family: 'icomoon';
+            color: $green;
+            font-size: 18px;
+            position: absolute;
+            left: 0;
+        }
+    }
+}
+.footer__social-link {
+    margin-bottom: 33px;
+    li {
+        display: inline-block;
+        & + li {
+            margin-left: 7px;
+        }
+    }
+    a {
+        width: 28px;
+        height: 28px;
+        background-image: url(../images/css_sprites.png);
+    }
+}
+.link-ico2 {
+    background-position: -30px -0;
+}
+.link-ico3 {
+    background-position: -60px -0;
+}
+.link-ico4 {
+    background-position: -0 -31px;
+}
+.link-ico5 {
+    background-position: -30px -31px;
+}
+
+.footer__form-title {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #fff;
+}
+.footer__form {
+    position: relative;
+    input {
+        border: none;
+        background-color: #2f3c43;
+        display: block;
+        width: 100%;
+        height: 40px;
+        color: #fff;
+        font-size: 14px;
+        padding-left: 13px;
+        padding-right: 50px;
+        &::placeholder {
+            color: #697378;
+        }
+    }
+    button {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        border: none;
+        height: 40px;
+        width: 43px;
+        cursor: pointer;
+        &::before {
+            content: '\f124';
+            position: absolute;
+            font-family: 'icomoon';
+            font-size: 20px;
+            color: #fff;
+            top: 11px;
+            left: 13px;
+        }
+    }
+}
+
+// end footer
+// start product-page
+
+.product-page__inner {
+    display: flex;
+    padding-bottom: 110px;
+}
+.product-page__aside {
+    margin-right: 30px;
+}
+.aside__item {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+}
+.aside__title {
+    border-bottom: 1px solid #dedede;
+    font-size: 20px;
+    color: $bg;
+    padding: 22px 0 19px;
+    @include f700;
+}
+.category__list {
+    padding-top: 10px;
+    li {
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 20px;
+        position: relative;
+        &::before {
+            content: '\f105';
+            font-family: 'icomoon';
+            color: $green;
+            font-size: 18px;
+            position: absolute;
+            left: 0;
+        }
+    }
+    a {
+        color: $bg;
+    }
+    span {
+        color: #90a4ae;
+        margin-left: 10px;
+    }
+}
+.price-range {
+    form {
+        padding-top: 20px;
+    }
+    button {
+        margin-top: 55px;
+        padding: 16px 10px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        width: 100%;
+        display: block;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        &::before {
+            content: '\f002';
+            font-family: 'icomoon';
+            color: #fff;
+            font-size: 15px;
+            position: absolute;
+            left: 58px;
+            top: 15px;
+        }
+    }
+}
+.irs-min,
+.irs-max {
+    display: none;
+}
+.irs--flat .irs-line {
+    height: 5px;
+    background-color: #f2f5f8;
+}
+.irs--flat .irs-bar {
+    height: 5px;
+    background-color: $bg;
+}
+.irs--flat .irs-handle {
+    width: 16px;
+    height: 16px;
+    border: 4px solid $green;
+    background-color: #fff;
+    border-radius: 50%;
+}
+.irs--flat .irs-handle {
+    top: 20px;
+}
+.irs--flat .irs-handle > i:first-child {
+    display: none;
+}
+.irs-from, .irs-single, .irs-to {
+    top: 45px;
+}
+.irs--flat .irs-from::before, .irs--flat .irs-single::before, .irs--flat .irs-to::before {
+    display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to{
+    color: #78909c;
+    font-size: 15px;
+    line-height: 1.333;
+    text-shadow: none;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+}
+.product-page__aside {
+    .products__item-img{
+        min-height: 120px;
+    }
+    .products__item {
+        box-shadow: none;
+    }
+    .products__item-content {
+        padding: 0;
+        min-height: 75px;
+    }
+    .products__item-info {
+        padding: 0;
+        min-height: 0;
+    }
+    .products__item-title {
+        font-size: 16px;
+    }
+    .products__item-price {
+        font-size: 16px;
+    }
+    .products__item-starnum {
+        display: none;
+    }
+    .rate-star {
+        margin-right: 0;
+    }
+    .products__item-author .avatar {
+        margin-right: 9px;
+    }
+    .jq-ry-container {
+        padding: 0;
+    }
+    .products__item {
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #e7ecf2;
+    }
+}
+.aside__products-item {
+    .products__item:last-child{
+        border: none;
+        padding-bottom: 0;
+    }
+    .products__item:first-child{
+        margin-top: 25px;
+    }
+}
+.top-sellers__link {
+    padding: 16px 10px;
+    display: block; 
+    background-color: $green;
+    color: #fff;
+    @include f500;
+    text-align: center;
+}
+.product-page__filter {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 20px;
+    margin-bottom: 30px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        font-size: 16px;
+        color: #90a4ae;
+        outline: none;
+        &.active {
+            color: $green;
+        }
+    }
+}
+.product-page__content {
+    width: 100%;
+}
+.product-page__filter-sort{
+    font-size: 15px;
+    color: #707070;
+    display: flex;
+    align-items: center;
+}
+button.icon-sort-amount-desc{
+    font-size: 14px;
+    color: #455a64;
+}
+button.icon-unsorted{
+    font-size: 18px;
+    color: #707070;
+}
+.product-page__content {
+    .products__item {
+        max-width: 270px;
+        background-color: #fff;
+        transition: all .5s;
+    }
+    .products__item-img {
+        min-height: 180px;
+    }
+    .products__item-content {
+        padding: 10px 20px;
+    }
+    .products__item-title {
+        font-size: 16px;
+    }
+    .products__item-info {
+        min-height: 65px;
+        padding: 10px 20px;
+    }
+    .rate-star {
+        margin-right: 5px;
+    }
+    .jq-ry-container {
+        padding: 0;
+    }
+}
+.product-page__items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.pagination__list {
+    li {
+        display: inline-block;
+        & + li {
+            margin-left: 6px;
+        }
+    }
+    a,
+    span {
+        box-shadow: 0 1px 2px 0 rgba(205, 214, 222, 0.75);
+        width: 38px;
+        height: 43px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        font-size: 16px;
+        color: $bg;
+        @include f500;
+        &.active {
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+.products__item-text {
+    display: none;
+}
+.products__item-price {
+    span {
+        display: none;
+    }
+}
+.products__item-list {
+    display: none;
+    .icon-comment-o,
+    .icon-heart-o {
+        display: inline-block;
+        font-size: 12px;
+        color: #70838d;
+        padding-left: 50px;
+        border-left: 1px solid #70838d;
+        position: relative;
+        span {
+            @include f500;
+            color: $bg;
+        }
+        &::before {
+            font-size: 16px;
+            color: $green;
+            position: absolute;
+            left: 20px;
+            top: 0;
+        }
+    }
+    .icon-comment-o {
+        padding-right: 30px;
+        &::before {
+            top: -2px;
+        }
+    }
+}
+.products__item {
+    &.list {
+        max-width: 100%;
+        .products__item-img {
+            width: 240px;
+            float: left;
+            min-height: 100%;
+        }
+        .products__item-text {
+            display: block;
+            font-size: 14px;
+            color: #70838d;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+        .products__item-price {
+            font-size: 30px;
+            span {
+                display: block;
+                font-size: 13px;
+                color: #aeb4bb;
+                margin-top: 30px;
+            }
+        }
+        .products__item-content {
+            padding-top: 23px;
+        }
+        .products__item-name {
+            max-width: 480px;
+        }
+        .products__item-list {
+            display: block;
+        }
+        .products__item-star {
+            margin-left: auto;
+            margin-right: 30px;
+        }
+    }
+}
+
+// start product-page
